--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -62,6 +62,11 @@
       float: right;
     }
   }
+
+  div.cwPropertiesTableHeader {
+    font-size: 24px;
+  }
+
   div.row {
     display: block;
   }
@@ -88,6 +93,22 @@
     }
     div.row-cell-value-textarea {
       width: 80%;
+    }
+    .tableTextInput input {
+      width: 100%;
+    }
+
+    .tableTextInput {
+      input {
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border: 1px solid #cccccc;
+        height: 34px;
+      }
+    }
+    .noWhiteSpace {
+      white-space: inherit;
     }
     div.row-cell-value {
       select {
