property color support

--- a/src/property/property.less
+++ b/src/property/property.less
@@ -1,3 +1,15 @@
 .scaleImg {
   height: 1rem;
+  margin-right: 0.3rem;
+}
+.spanLookup {
+  display: flex;
+  align-items: center;
+  i {
+    margin-right: 0.3rem;
+  }
+}
+
+.k-grid-content .spanLookup {
+  align-items: center;
 }
