--- a/src/property/property.css
+++ b/src/property/property.css
@@ -1,3 +1,14 @@
 .scaleImg {
   height: 1rem;
+  margin-right: 0.3rem;
+}
+.spanLookup {
+  display: flex;
+  align-items: center;
+}
+.spanLookup i {
+  margin-right: 0.3rem;
+}
+.k-grid-content .spanLookup {
+  align-items: center;
 }
