--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -59,12 +59,23 @@
 .homePage_main .homePage_column .homePage_display {
   margin: 5px;
 }
-.homePage_main .homePage_column .homePage_display .cwPropertiesTableHeader span.homePage_display_title {
+.homePage_main .homePage_column .homePage_display .cwPropertiesTableHeader span.homePage_display_title,
+.homePage_main .homePage_column .homePage_display .fa.expendIcon {
   font-size: 24px;
 }
+.homePage_main .homePage_column .homePage_display .oldAccordeon {
+  background-color: #03a0ce;
+  color: #ffffff;
+}
 .homePage_main .homePage_column .homePage_display .homePage_display_content {
-  transition: height 0.42s ease-out;
+  transition: max-height 0.42s ease-out;
   overflow: hidden;
+}
+.homePage_main .homePage_column .homePage_display .homePage_display_content.oldAccordeonContent {
+  border: 1px solid #03a0ce;
+}
+.homePage_main .homePage_column .homePage_display .homePage_display_content.oldAccordeonContent div {
+  margin: 10px;
 }
 .homePage_main .homePage_column .homePage_display .homePage_evolveView {
   overflow: auto;
