--- a/src/TableComplexeEnhanced/tableComplexeEnhanced.less
+++ b/src/TableComplexeEnhanced/tableComplexeEnhanced.less
@@ -27,3 +27,7 @@ a.k-button.k-button-icontext.k-grid-popoutitem {
 .k-grid.k-widget {
   overflow: hidden;
 }
+
+.cw-zone .cw_grid_wrap {
+  margin-bottom: 70px !important;
+}
