complex table : title update

--- a/src/TableComplexeEnhanced/tableComplexeEnhanced.less
+++ b/src/TableComplexeEnhanced/tableComplexeEnhanced.less
@@ -31,3 +31,8 @@ a.k-button.k-button-icontext.k-grid-popoutitem {
 .cw-zone .cw_grid_wrap {
   margin-bottom: 0px !important;
 }
+
+div.k-header.k-grid-toolbar {
+  display: inline-flex;
+  width: 100%;
+}
