--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -202,3 +202,8 @@
     }
   }
 }
+
+body .main-nav .main-level a.cw-menu-link.activeLink {
+  color: @cwMenuLeftMainNavigationTextColorActive;
+  background-color: @cwMenuLeftMainNavigationBackgroundColorActive;
+}
