fix expend button

--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -65,7 +65,7 @@
 }
 .homePage_main .homePage_column .homePage_display .rightExpandButton {
   color: #03a0ce;
-  position: absolute;
+  float: right;
   display: flex;
   right: 0px;
   align-items: center;
