--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -47,7 +47,7 @@
       }
       .rightExpandButton {
         color: @cwColor2;
-        position: absolute;
+        float: right;
         display: flex;
         right: 0px;
         align-items: center;
