--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -222,3 +222,24 @@ body .main-nav .main-level a.cw-menu-link.activeLink {
   top: -20px;
   margin-left: 15%;
 }
+
+.emptyZone {
+  display: flex;
+  img {
+    width: 60%;
+  }
+  .emptyZoneText {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    .emptyZoneTitle {
+      font-size: 1.5rem;
+      color: @cwColor1;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+    .emptyZoneDesciption {
+      color: @cwColor1;
+    }
+  }
+}
