--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -240,6 +240,16 @@ body .main-nav .main-level a.cw-menu-link.activeLink {
     }
     .emptyZoneDesciption {
       color: @cwColor1;
+      margin-bottom: 20px;
+    }
+    .emptyLink {
+      background-color: @cwColor1;
+      color: #ffffff;
+      border: 1px solid @cwColor1;
+      padding: 8px;
+      box-shadow: 1px 1px 1px #bdbdbd;
+      border-radius: 5px;
+      margin-bottom: 10px;
     }
   }
 }
