--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -232,24 +232,31 @@ body .main-nav .main-level a.cw-menu-link.activeLink {
     width: 40%;
     display: flex;
     flex-direction: column;
-    .emptyZoneTitle {
-      font-size: 1.5rem;
-      color: @cwColor1;
-      margin-bottom: 10px;
-      margin-top: 10px;
-    }
-    .emptyZoneDesciption {
-      color: @cwColor1;
-      margin-bottom: 20px;
-    }
-    .emptyLink {
-      background-color: @cwColor1;
-      color: #ffffff;
-      border: 1px solid @cwColor1;
-      padding: 8px;
-      box-shadow: 1px 1px 1px #bdbdbd;
-      border-radius: 5px;
-      margin-bottom: 10px;
+    margin: 10px;
+    justify-content: center;
+    > div {
+      display: flex;
+      flex-direction: column;
+
+      .emptyZoneTitle {
+        font-size: 1.5rem;
+        color: @cwColor1;
+        margin-bottom: 10px;
+      }
+      .emptyZoneDesciption {
+        color: @cwColor1;
+      }
+      span {
+        margin-top: 20px;
+        .emptyLink {
+          background-color: @cwColor1;
+          color: #ffffff;
+          border: 1px solid @cwColor1;
+          padding: 8px;
+          box-shadow: 1px 1px 1px #bdbdbd;
+          border-radius: 5px;
+        }
+      }
     }
   }
 }
