--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -45,15 +45,26 @@
       .fa.expendIcon {
         font-size: 24px;
       }
-      .rightExpandButton {
-        color: @cwColor2;
-        float: right;
+      .extendableTitle {
         display: flex;
-        right: 0px;
         align-items: center;
-        padding: 5px;
-        span {
-          margin-right: 3px;
+        .homePage_display_title {
+          flex: 1;
+        }
+        .display_sortProperty {
+          width: 250px;
+        }
+        .rightExpandButton {
+          width: 65px;
+          color: @cwColor2;
+          float: right;
+          display: flex;
+          right: 0px;
+          align-items: center;
+          padding: 5px;
+          span {
+            margin-right: 3px;
+          }
         }
       }
 
