--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -110,7 +110,7 @@
             flex-grow: 1;
           }
           .slideslider {
-            flex-grow: 1;
+            flex: 1;
             display: flex;
             justify-content: center;
             .selected {
@@ -121,7 +121,7 @@
             }
           }
           .slideButton {
-            flex-grow: 1;
+            width: 100px;
             display: flex;
             justify-content: flex-end;
             margin-right: 10px;
