--- a/src/actionOnObjectPage/actionOnObjectPage.css
+++ b/src/actionOnObjectPage/actionOnObjectPage.css
@@ -30,3 +30,81 @@ div.CwPropertiesLayoutHelpText img {
 div.CwPropertiesLayoutHelpText div {
   display: contents;
 }
+.singlePageCarrousel {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background: #ffffffe6;
+}
+.singlePageCarrousel .homePage_carrousel_inner {
+  width: 800px;
+  border-radius: 20px;
+  border: 1px solid #03a0ce;
+  box-shadow: 5px 5px 5px #03a0ce;
+  background: white;
+  overflow: hidden;
+}
+.singlePageCarrousel .homePage_carrousel_inner .slide {
+  display: flex;
+}
+.singlePageCarrousel .homePage_carrousel_inner .slide .slidePicture {
+  flex-grow: 1;
+  height: 220px;
+}
+.singlePageCarrousel .homePage_carrousel_inner .slide .leftSlider {
+  flex-grow: 1;
+}
+.singlePageCarrousel .homePage_carrousel_inner .slide .slideText {
+  flex-grow: 1;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.singlePageCarrousel .homePage_carrousel_inner .slide .slideText .slideTitle {
+  font-size: 20px;
+  font-weight: bold;
+}
+.singlePageCarrousel .homePage_carrousel_inner .slide .slideText .slideDescription {
+  margin-top: 10px;
+}
+.singlePageCarrousel .homePage_carrousel_inner .slide .rightSlider {
+  flex-grow: 1;
+}
+.singlePageCarrousel .homePage_carrousel_inner .lowNavBar {
+  display: flex;
+  justify-content: flex-end;
+}
+.singlePageCarrousel .homePage_carrousel_inner .lowNavBar .emptyLow {
+  flex-grow: 1;
+}
+.singlePageCarrousel .homePage_carrousel_inner .lowNavBar .slideslider {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+.singlePageCarrousel .homePage_carrousel_inner .lowNavBar .slideslider .selected {
+  color: #03a0ce;
+}
+.singlePageCarrousel .homePage_carrousel_inner .lowNavBar .slideslider i {
+  margin: 1px;
+}
+.singlePageCarrousel .homePage_carrousel_inner .lowNavBar .slideButton {
+  width: 100px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10px;
+}
+.singlePageCarrousel .homePage_carrousel_inner .lowNavBar .slideButton a {
+  margin: 2px;
+  background-color: #03a0ce;
+  color: #ffffff;
+  border: 1px solid #03a0ce;
+  padding: 8px;
+  box-shadow: 1px 1px 1px #bdbdbd;
+  border-radius: 5px;
+}
