--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -304,4 +304,8 @@
   div.row div.row-cell-value.row-cell-max-width .filter-wrapper .drillDownSubtitle th {
     text-align: start;
   }
+
+  .workFlowNetwork {
+    height: 500px;
+  }
 }
