Fix Styling on inputs

--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -6,6 +6,17 @@
   display: flex;
   flex-wrap: wrap;
 
+  .selectDropDownList {
+    padding: 5px;
+    color: #5c5d61;
+    font-size: 12px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+    width: 400px;
+  }
   .input.memoInput {
     align-items: flex-start;
   }
@@ -22,6 +33,7 @@
     }
     .value {
       font-size: large;
+      width: 400px;
     }
     textarea.value,
     input.value {
