--- a/src/workflow/cwWorkflow.css
+++ b/src/workflow/cwWorkflow.css
@@ -28,6 +28,17 @@
   display: flex;
   flex-wrap: wrap;
 }
+.cwWorkflow .selectDropDownList {
+  padding: 5px;
+  color: #5c5d61;
+  font-size: 12px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  outline: none;
+  width: 400px;
+}
 .cwWorkflow .input.memoInput {
   align-items: flex-start;
 }
@@ -45,6 +56,7 @@
 }
 .cwWorkflow .input .value {
   font-size: large;
+  width: 400px;
 }
 .cwWorkflow .input textarea.value,
 .cwWorkflow .input input.value {
