--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -95,6 +95,24 @@
       cursor: not-allowed;
     }
   }
+  .searchContainer {
+    display: flex;
+    align-items: center;
+  }
+  .associationContainerResult {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    > div {
+      width: 400px;
+      .fa {
+        color: red;
+        margin: 2px;
+        cursor: pointer;
+      }
+    }
+  }
   .searchList {
     width: 400px;
     height: 39px;
