--- a/src/workflow/cwWorkflow.css
+++ b/src/workflow/cwWorkflow.css
@@ -74,6 +74,7 @@
   flex-direction: column;
   margin-top: 30px;
   margin-bottom: 10px;
+  margin-left: 0.6em;
 }
 .cwWorkflow .documentAttach .label {
   max-width: 400px;
