--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -52,6 +52,7 @@
     flex-direction: column;
     margin-top: 30px;
     margin-bottom: 10px;
+    margin-left: 0.6em;
     .label {
       max-width: 400px;
       vertical-align: top;
