--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -303,7 +303,7 @@
   }
 }
 
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none), {
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .cwWorkflow .searchList .workFlowListObjectTypeResult .workFlowListObjectTypeResultSubList,
   .cwWorkflow .searchList .workFlowListObjectTypeMessage .workFlowListObjectTypeResultSubList {
     margin-top: 0px !important;
